fix: [PAGOPA-3210] Code smells